--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "mock": "node mock/server.js",
+    "mock": "nodemon mock/server.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -56,5 +56,5 @@
     "react-app-rewired": "^2.1.5",
     "redux-devtools-extension": "^2.13.8"
   },
-  "proxy": "http://47.103.203.152"
+  "proxy": "http://localhost:5000"
 }
